--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -25,43 +25,38 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAP-1T-SSs">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btn_check_setting_on" translatesAutoresizingMaskIntoConstraints="NO" id="Ure-eB-OIx">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ure-eB-OIx">
                                         <rect key="frame" x="20" y="28" width="335" height="180"/>
+                                        <color key="backgroundColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="180" id="mZo-zr-BnO"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rz6-UO-ya8">
-                                        <rect key="frame" x="20" y="228" width="335" height="21"/>
-                                        <color key="backgroundColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="oPh-yG-q1N"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GwI-Py-Pr3">
-                                        <rect key="frame" x="20" y="269" width="60" height="60"/>
+                                        <rect key="frame" x="20" y="238" width="60" height="60"/>
                                         <color key="backgroundColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="Nbv-OL-rqn"/>
                                             <constraint firstAttribute="height" constant="60" id="zwp-xK-k3U"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isWindlessable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJg-eA-gNL">
-                                        <rect key="frame" x="90" y="273.5" width="265" height="21"/>
-                                        <color key="backgroundColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJg-eA-gNL">
+                                        <rect key="frame" x="90" y="242.5" width="265" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="Xo4-tn-QBy"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isWindlessable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3F-0D-kAP">
-                                        <rect key="frame" x="90" y="303.5" width="50" height="21"/>
-                                        <color key="backgroundColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3F-0D-kAP">
+                                        <rect key="frame" x="90" y="272.5" width="50" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="PTL-5C-cRb"/>
                                             <constraint firstAttribute="height" constant="21" id="oVz-WM-b5r"/>
@@ -69,62 +64,54 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isWindlessable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDd-wm-28Y">
-                                        <rect key="frame" x="150" y="304" width="205" height="21"/>
-                                        <color key="backgroundColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017.11.03" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDd-wm-28Y">
+                                        <rect key="frame" x="150" y="273" width="205" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="cgZ-yO-tDP"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isWindlessable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CXK-SM-zVY">
-                                        <rect key="frame" x="20" y="349" width="335" height="128"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WkL-0Q-vTJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="335" height="21"/>
-                                                <color key="backgroundColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="21" id="dNr-Kh-EY0"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5Kt-km-Vqg">
+                                        <rect key="frame" x="20" y="318" width="335" height="150"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="9B5-fN-7vc"/>
-                                            <constraint firstItem="WkL-0Q-vTJ" firstAttribute="top" secondItem="CXK-SM-zVY" secondAttribute="top" id="ITI-iL-5fd"/>
-                                            <constraint firstAttribute="trailing" secondItem="WkL-0Q-vTJ" secondAttribute="trailing" id="eyU-3Y-J9p"/>
-                                            <constraint firstItem="WkL-0Q-vTJ" firstAttribute="leading" secondItem="CXK-SM-zVY" secondAttribute="leading" id="nz2-zt-wL7"/>
+                                            <constraint firstAttribute="height" constant="150" id="owN-RY-e37"/>
                                         </constraints>
-                                    </view>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isWindlessable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </textView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="rz6-UO-ya8" secondAttribute="trailing" constant="20" id="2v9-gZ-pf8"/>
-                                    <constraint firstItem="CXK-SM-zVY" firstAttribute="top" secondItem="GwI-Py-Pr3" secondAttribute="bottom" constant="20" id="3h0-Lr-q7G"/>
                                     <constraint firstAttribute="trailing" secondItem="Ure-eB-OIx" secondAttribute="trailing" constant="20" id="48j-ED-bKf"/>
                                     <constraint firstItem="R3F-0D-kAP" firstAttribute="centerY" secondItem="GwI-Py-Pr3" secondAttribute="centerY" constant="15" id="4tQ-Sp-WP1"/>
                                     <constraint firstItem="Ure-eB-OIx" firstAttribute="top" secondItem="cAP-1T-SSs" secondAttribute="topMargin" constant="20" id="5o6-zc-xmR"/>
                                     <constraint firstItem="R3F-0D-kAP" firstAttribute="leading" secondItem="GwI-Py-Pr3" secondAttribute="trailing" constant="10" id="IBs-P3-mfA"/>
                                     <constraint firstItem="Ure-eB-OIx" firstAttribute="leading" secondItem="cAP-1T-SSs" secondAttribute="leading" constant="20" id="IHR-Qg-O7X"/>
                                     <constraint firstAttribute="trailing" secondItem="LJg-eA-gNL" secondAttribute="trailing" constant="20" id="J6z-IF-ipk"/>
+                                    <constraint firstItem="GwI-Py-Pr3" firstAttribute="top" secondItem="Ure-eB-OIx" secondAttribute="bottom" constant="30" id="PXj-kR-RGF"/>
                                     <constraint firstItem="kDd-wm-28Y" firstAttribute="leading" secondItem="R3F-0D-kAP" secondAttribute="trailing" constant="10" id="Pp5-XL-a5b"/>
-                                    <constraint firstItem="CXK-SM-zVY" firstAttribute="leading" secondItem="cAP-1T-SSs" secondAttribute="leading" constant="20" id="Q8G-aL-zQf"/>
                                     <constraint firstItem="kDd-wm-28Y" firstAttribute="centerY" secondItem="R3F-0D-kAP" secondAttribute="centerY" id="UIw-kq-0OR"/>
-                                    <constraint firstItem="rz6-UO-ya8" firstAttribute="top" secondItem="Ure-eB-OIx" secondAttribute="bottom" constant="20" id="UpY-RR-PZI"/>
+                                    <constraint firstItem="5Kt-km-Vqg" firstAttribute="top" secondItem="GwI-Py-Pr3" secondAttribute="bottom" constant="20" id="bAH-EY-Ggp"/>
                                     <constraint firstItem="GwI-Py-Pr3" firstAttribute="leading" secondItem="cAP-1T-SSs" secondAttribute="leading" constant="20" id="bTI-Mu-maI"/>
                                     <constraint firstItem="LJg-eA-gNL" firstAttribute="leading" secondItem="GwI-Py-Pr3" secondAttribute="trailing" constant="10" id="fKm-jz-mDZ"/>
-                                    <constraint firstItem="rz6-UO-ya8" firstAttribute="leading" secondItem="cAP-1T-SSs" secondAttribute="leading" constant="20" id="fMk-lU-lWd"/>
-                                    <constraint firstAttribute="trailing" secondItem="CXK-SM-zVY" secondAttribute="trailing" constant="20" id="faM-2z-CKl"/>
                                     <constraint firstItem="LJg-eA-gNL" firstAttribute="centerY" secondItem="GwI-Py-Pr3" secondAttribute="centerY" constant="-15" id="isT-vL-Blt"/>
                                     <constraint firstAttribute="trailing" secondItem="kDd-wm-28Y" secondAttribute="trailing" constant="20" id="jWR-Rt-EoB"/>
-                                    <constraint firstItem="GwI-Py-Pr3" firstAttribute="top" secondItem="rz6-UO-ya8" secondAttribute="bottom" constant="20" id="tUt-zj-ts9"/>
+                                    <constraint firstAttribute="trailing" secondItem="5Kt-km-Vqg" secondAttribute="trailing" constant="20" id="k5M-Pc-Mft"/>
+                                    <constraint firstItem="5Kt-km-Vqg" firstAttribute="leading" secondItem="cAP-1T-SSs" secondAttribute="leading" constant="20" id="oR9-WE-kbO"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isWindlessable" value="NO"/>
@@ -146,11 +133,9 @@
                     <connections>
                         <outlet property="contentsView" destination="cAP-1T-SSs" id="qwQ-2K-FLh"/>
                         <outlet property="view1" destination="Ure-eB-OIx" id="Qso-9G-R5n"/>
-                        <outlet property="view2" destination="rz6-UO-ya8" id="CVd-l4-xOC"/>
                         <outlet property="view3" destination="LJg-eA-gNL" id="e1u-wB-AWG"/>
                         <outlet property="view4" destination="GwI-Py-Pr3" id="ZHA-ub-uNf"/>
                         <outlet property="view5" destination="R3F-0D-kAP" id="ywN-ds-Jhg"/>
-                        <outlet property="view6" destination="WkL-0Q-vTJ" id="mML-j6-1sh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -160,7 +145,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-1519" y="901"/>
+            <point key="canvasLocation" x="-1519.2" y="900.89955022488766"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="Ygr-5C-oxr">
@@ -577,7 +562,4 @@
             <point key="canvasLocation" x="-815" y="136"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="btn_check_setting_on" width="18" height="18"/>
-    </resources>
 </document>
